ARM/newVM.json
: Microsoft.Compute/virtualMachines
Location                 : westus
Tags                     : {"DeploymentId":"1173093","LaunchId":"21565","LaunchType":"ON_DEMAND_LAB","TemplateId":"4283","TenantId":"363"}
HardwareProfile          : {VmSize}
NetworkProfile           : {NetworkInterfaces}
OSProfile                : {ComputerName, AdminUsername, LinuxConfiguration, Secrets, AllowExtensionOperations, RequireGuestProvisionSignal}
ProvisioningState        : Failed
StorageProfile           : {ImageReference, OsDisk, DataDisks, DiskControllerType}
FullyQualifiedDomainName : myvm1vm1-2bf09a.West US.cloudapp.azure.com
TimeCreated              : 12/12/2023 11:58:47 PM


PS C:\Users\goodwin\pythg> az group export
the following arguments are required: --name/-n/--resource-group/-g

Examples from AI knowledge base:
az group export --resource-group myresourcegroup
Captures a resource group as a template. (autogenerated)

az group export --resource-group myresourcegroup --skip-all-params
Captures a resource group as a template. (autogenerated)

https://docs.microsoft.com/en-US/cli/azure/group#az_group_export
Read more about the command in reference docs
PS C:\Users\goodwin\pythg> az group export --resource-group 
argument --name/-n/--resource-group/-g: expected one argument

Examples from AI knowledge base:
az group export --resource-group myresourcegroup
Captures a resource group as a template. (autogenerated)

az group export --resource-group myresourcegroup --skip-all-params
Captures a resource group as a template. (autogenerated)

https://docs.microsoft.com/en-US/cli/azure/group#az_group_export
Read more about the command in reference docs
PS C:\Users\goodwin\pythg> az group export --resource-group ODL-azure-1173093                                                                                   
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkInterfaces_MYVM1VM1_name": {
      "type": "String"
    },
    "networkInterfaces_ddsdse325trgfc402_z1_name": {
      "type": "String"
    },
    "networkSecurityGroups_MYVM1VM1_name": {
      "type": "String"
    },
    "networkSecurityGroups_ddsdse325trgfc_nsg_name": {
      "type": "String"
    },
    "publicIPAddresses_ddsdse325trgfc_ip_name": {
      "type": "String"
    },
    "sshPublicKeys_ddsdse325trgfc_key_name": {
      "type": "String"
    },
    "virtualMachines_MYVM1VM1_name": {
      "type": "String"
    },
    "virtualMachines_ddsdse325trgfc_name": {
      "type": "String"
    },
    "virtualNetworks_MYVM1VM1_name": {
      "type": "String"
    },
    "virtualNetworks_ddsdse325trgfc_vnet_name": {
      "type": "String"
    }
  },
  "resources": [
    {
      "apiVersion": "2023-03-01",
      "location": "eastus",
      "name": "[parameters('sshPublicKeys_ddsdse325trgfc_key_name')]",
      "properties": {
        "publicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDBBy51B/wGy3opJsz6XkXbIG4dHWxgAnvx6daToCLLXxEDdVSBa5ZOgQjBYF7CXieW0cGN21dPbXm/x3qOXE8095FCY/7WhWIeSD8cNzvXT3Th5U/oEKf11FHUnJxHHysc/WIz+9O6KnwcBHD46hRDJ4yNlB6b4tHvJwh77k0TyK80BvjBSfmo2nqjlXQ6R7/RxKJ6Kf3prSN8q4beRvzUQH0O5hr+7zIBnBaEr7lW5uWuggBbcJUPf5Qb+JB1wGskuQHAS3wj/LUjK8/472qwFK+Sd3vnPRbFmx57y6Bb35b3oTv3IxJESuDa5/yTnymGIxAyoPVujgCOpcPzoJiKIsMee7j5CxE201tWaTYwpI65hNX8UF5eqSWo35+ctKUAz27hgBsCS+3KRKwIYpnHyARXCqV7Ru35CMu67D1PhO64sGklOel642 [...]
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Compute/sshPublicKeys"
    },
    {
      "apiVersion": "2023-05-01",
      "location": "eastus",
      "name": "[parameters('networkSecurityGroups_ddsdse325trgfc_nsg_name')]",
      "properties": {
        "securityRules": [
          {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_ddsdse325trgfc_nsg_name'), 'SSH')]",
            "name": "SSH",
            "properties": {
              "access": "Allow",
              "destinationAddressPrefix": "*",
              "destinationAddressPrefixes": [],
              "destinationPortRange": "22",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 300,
              "protocol": "TCP",
              "sourceAddressPrefix": "*",
              "sourceAddressPrefixes": [],
              "sourcePortRange": "*",
              "sourcePortRanges": []
            },
            "type": "Microsoft.Network/networkSecurityGroups/securityRules"
          }
        ]
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Network/networkSecurityGroups"
    },
    {
      "apiVersion": "2023-05-01",
      "location": "westus",
      "name": "[parameters('networkSecurityGroups_MYVM1VM1_name')]",
      "properties": {
        "securityRules": [
          {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_MYVM1VM1_name'), concat(parameters('networkSecurityGroups_MYVM1VM1_name'), '22'))]",  
            "name": "[concat(parameters('networkSecurityGroups_MYVM1VM1_name'), '22')]",
            "properties": {
              "access": "Allow",
              "destinationAddressPrefix": "*",
              "destinationAddressPrefixes": [],
              "destinationPortRange": "22",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 1000,
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourceAddressPrefixes": [],
              "sourcePortRange": "*",
              "sourcePortRanges": []
            },
            "type": "Microsoft.Network/networkSecurityGroups/securityRules"
          }
        ]
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Network/networkSecurityGroups"
    },
    {
      "apiVersion": "2023-05-01",
      "location": "eastus",
      "name": "[parameters('publicIPAddresses_ddsdse325trgfc_ip_name')]",
      "properties": {
        "idleTimeoutInMinutes": 4,
        "ipAddress": "4.227.164.198",
        "ipTags": [],
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static"
      },
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Network/publicIPAddresses",
      "zones": [
        "1"
      ]
    },
    {
      "apiVersion": "2023-05-01",
      "location": "eastus",
      "name": "[parameters('virtualNetworks_ddsdse325trgfc_vnet_name')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "enableDdosProtection": false,
        "subnets": [
          {
            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_ddsdse325trgfc_vnet_name'), 'default')]",
            "name": "default",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "delegations": [],
              "privateEndpointNetworkPolicies": "Disabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": []
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Network/virtualNetworks"
    },
    {
      "apiVersion": "2023-05-01",
      "location": "westus",
      "name": "[parameters('virtualNetworks_MYVM1VM1_name')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "192.168.0.0/16"
          ]
        },
        "enableDdosProtection": false,
        "subnets": [
          {
            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_MYVM1VM1_name'), parameters('virtualNetworks_MYVM1VM1_name'))]",
            "name": "[parameters('virtualNetworks_MYVM1VM1_name')]",
            "properties": {
              "addressPrefix": "192.168.1.0/24",
              "delegations": [],
              "privateEndpointNetworkPolicies": "Disabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": []
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Network/virtualNetworks"
    },
    {
      "apiVersion": "2023-03-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ddsdse325trgfc402_z1_name'))]"
      ],
      "location": "eastus",
      "name": "[parameters('virtualMachines_ddsdse325trgfc_name')]",
      "properties": {
        "additionalCapabilities": {
          "hibernationEnabled": false
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        },
        "hardwareProfile": {
          "vmSize": "Standard_B1s"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ddsdse325trgfc402_z1_name'))]",
              "properties": {
                "deleteOption": "Detach"
              }
            }
          ]
        },
        "osProfile": {
          "adminUsername": "azureuser",
          "allowExtensionOperations": true,
          "computerName": "[parameters('virtualMachines_ddsdse325trgfc_name')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "enableVMAgentPlatformUpdates": false,
            "patchSettings": {
              "assessmentMode": "ImageDefault",
              "patchMode": "ImageDefault"
            },
            "provisionVMAgent": true,
            "ssh": {
              "publicKeys": [
                {
                  "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDBBy51B/wGy3opJsz6XkXbIG4dHWxgAnvx6daToCLLXxEDdVSBa5ZOgQjBYF7CXieW0cGN21dPbXm/x3qOXE8095FCY/7WhWIeSD8cNzvXT3Th5U/oEKf11FHUnJxHHysc/WIz+9O6KnwcBHD46hRDJ4yNlB6b4tHvJwh77k0TyK80BvjBSfmo2nqjlXQ6R7/RxKJ6Kf3prSN8q4beRvzUQH0O5hr+7zIBnBaEr7lW5uWuggBbcJUPf5Qb+JB1wGskuQHAS3wj/LUjK8/472qwFK+Sd3vnPRbFmx57y6Bb35b3oTv3IxJESuDa5/yTnymGIxAyoPVujgCOpcPzoJiKIsMee7j5CxE201tWaTYwpI65hNX8UF5eqSWo35+ctKUAz27hgBsCS+3KRKwIYpnHyARXCqV7Ru35CMu67D1PhO64sG [...]
                  "path": "/home/azureuser/.ssh/authorized_keys"
                }
              ]
            }
          },
          "requireGuestProvisionSignal": true,
          "secrets": []
        },
        "securityProfile": {
          "securityType": "TrustedLaunch",
          "uefiSettings": {
            "secureBootEnabled": true,
            "vTpmEnabled": true
          }
        },
        "storageProfile": {
          "dataDisks": [],
          "diskControllerType": "SCSI",
          "imageReference": {
            "offer": "0001-com-ubuntu-server-focal",
            "publisher": "canonical",
            "sku": "20_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "deleteOption": "Delete",
            "diskSizeGB": 30,
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_ddsdse325trgfc_name'), '_OsDisk_1_0c4e1949d4f740f8b1c3ba876cc2eeb2'))]",
              "storageAccountType": "StandardSSD_LRS"
            },
            "name": "[concat(parameters('virtualMachines_ddsdse325trgfc_name'), '_OsDisk_1_0c4e1949d4f740f8b1c3ba876cc2eeb2')]",
            "osType": "Linux"
          }
        }
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Compute/virtualMachines",
      "zones": [
        "1"
      ]
    },
    {
      "apiVersion": "2023-03-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_MYVM1VM1_name'))]"
      ],
      "location": "westus",
      "name": "[parameters('virtualMachines_MYVM1VM1_name')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_MYVM1VM1_name'))]"
            }
          ]
        },
        "osProfile": {
          "adminUsername": "jchu",
          "allowExtensionOperations": true,
          "computerName": "[parameters('virtualMachines_MYVM1VM1_name')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "enableVMAgentPlatformUpdates": false,
            "patchSettings": {
              "assessmentMode": "ImageDefault",
              "patchMode": "ImageDefault"
            },
            "provisionVMAgent": true
          },
          "requireGuestProvisionSignal": true,
          "secrets": []
        },
        "storageProfile": {
          "dataDisks": [],
          "diskControllerType": "SCSI",
          "imageReference": {
            "offer": "0001-com-ubuntu-server-jammy",
            "publisher": "Canonical",
            "sku": "22_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "deleteOption": "Detach",
            "diskSizeGB": 30,
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            },
            "osType": "Linux"
          }
        }
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Compute/virtualMachines"
    },
    {
      "apiVersion": "2023-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_MYVM1VM1_name'))]"
      ],
      "name": "[concat(parameters('networkSecurityGroups_MYVM1VM1_name'), '/', parameters('networkSecurityGroups_MYVM1VM1_name'), '22')]",
      "properties": {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "priority": 1000,
        "protocol": "Tcp",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": []
      },
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "apiVersion": "2023-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ddsdse325trgfc_nsg_name'))]"
      ],
      "name": "[concat(parameters('networkSecurityGroups_ddsdse325trgfc_nsg_name'), '/SSH')]",
      "properties": {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "priority": 300,
        "protocol": "TCP",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": []
      },
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "apiVersion": "2023-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_ddsdse325trgfc_vnet_name'))]"
      ],
      "name": "[concat(parameters('virtualNetworks_ddsdse325trgfc_vnet_name'), '/default')]",
      "properties": {
        "addressPrefix": "10.0.0.0/24",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Disabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      },
      "type": "Microsoft.Network/virtualNetworks/subnets"
    },
    {
      "apiVersion": "2023-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_MYVM1VM1_name'))]"
      ],
      "name": "[concat(parameters('virtualNetworks_MYVM1VM1_name'), '/', parameters('virtualNetworks_MYVM1VM1_name'))]",
      "properties": {
        "addressPrefix": "192.168.1.0/24",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Disabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      },
      "type": "Microsoft.Network/virtualNetworks/subnets"
    },
    {
      "apiVersion": "2023-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_MYVM1VM1_name'), parameters('virtualNetworks_MYVM1VM1_name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_MYVM1VM1_name'))]"
      ],
      "kind": "Regular",
      "location": "westus",
      "name": "[parameters('networkInterfaces_MYVM1VM1_name')]",
      "properties": {
        "auxiliaryMode": "None",
        "auxiliarySku": "None",
        "disableTcpStateTracking": false,
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "ipConfigurations": [
          {
            "etag": "W/\"fb3bc6f0-5c5b-4ddd-8719-70d4f9d91d49\"",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_MYVM1VM1_name')), concat('/ipConfigurations/', parameters('networkInterfaces_MYVM1VM1_name')))]",    
            "name": "[parameters('networkInterfaces_MYVM1VM1_name')]",
            "properties": {
              "primary": true,
              "privateIPAddress": "192.168.1.4",
              "privateIPAddressVersion": "IPv4",
              "privateIPAllocationMethod": "Dynamic",
              "provisioningState": "Succeeded",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_MYVM1VM1_name'), parameters('virtualNetworks_MYVM1VM1_name'))]"
              }
            },
            "type": "Microsoft.Network/networkInterfaces/ipConfigurations"
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_MYVM1VM1_name'))]"
        },
        "nicType": "Standard"
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Network/networkInterfaces"
    },
    {
      "apiVersion": "2023-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ddsdse325trgfc_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_ddsdse325trgfc_vnet_name'), 'default')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ddsdse325trgfc_nsg_name'))]"
      ],
      "kind": "Regular",
      "location": "eastus",
      "name": "[parameters('networkInterfaces_ddsdse325trgfc402_z1_name')]",
      "properties": {
        "auxiliaryMode": "None",
        "auxiliarySku": "None",
        "disableTcpStateTracking": false,
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "ipConfigurations": [
          {
            "etag": "W/\"548e88cf-ce38-4d03-9f3c-b99291eba8ba\"",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ddsdse325trgfc402_z1_name')), '/ipConfigurations/ipconfig1')]",
            "name": "ipconfig1",
            "properties": {
              "primary": true,
              "privateIPAddress": "10.0.0.4",
              "privateIPAddressVersion": "IPv4",
              "privateIPAllocationMethod": "Dynamic",
              "provisioningState": "Succeeded",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ddsdse325trgfc_ip_name'))]",
                "properties": {
                  "deleteOption": "Detach"
                }
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_ddsdse325trgfc_vnet_name'), 'default')]"
              }
            },
            "type": "Microsoft.Network/networkInterfaces/ipConfigurations"
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ddsdse325trgfc_nsg_name'))]"
        },
        "nicType": "Standard"
      },
      "tags": {
        "DeploymentId": "1173093",
        "LaunchId": "21565",
        "LaunchType": "ON_DEMAND_LAB",
        "TemplateId": "4283",
        "TenantId": "363"
      },
      "type": "Microsoft.Network/networkInterfaces"
    }
  ],
  "variables": {}
}
